Bug 246110 - Nepomuk crash on startup
Summary: Nepomuk crash on startup
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
: 291493 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-29 04:36 UTC by chsu13
Modified: 2012-07-06 17:56 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chsu13 2010-07-29 04:36:49 UTC
Application: nepomukservicestub (0.2)
KDE Platform Version: 4.5.61 (KDE 4.5.61 (KDE 4.6 >= 20100724)) "release 1"
Qt Version: 4.6.3
Operating System: Linux 2.6.31.12-0.2-default i686
Distribution: "openSUSE 11.2 (i586)"

-- Information about the crash:
- What I was doing when the application crashed: i startet my computer, plasma-desktop appeared and a window was shown with informatio about nepomuk could not find strigi and then crashed.

The crash can be reproduced every time.

-- Backtrace:
Application: Nepomuk-Dienst (nepomukservicestub), signal: Segmentation fault
[Current thread is 1 (Thread 0xb57bb700 (LWP 5832))]

Thread 3 (Thread 0xb2a19b70 (LWP 5888)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb749dd95 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb7515730 in wait (time=<value optimized out>, this=<value optimized out>) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (time=<value optimized out>, this=<value optimized out>) at thread/qwaitcondition_unix.cpp:159
#4  0xb2b1d344 in Nepomuk::IndexFeeder::run (this=0x8180ec8) at /usr/src/debug/kdebase-runtime-4.5.61svn1153958/nepomuk/services/strigi/nepomukindexfeeder.cpp:182
#5  0xb751462f in QThreadPrivate::start (arg=0x8180ec8) at thread/qthread_unix.cpp:248
#6  0xb74996e5 in start_thread () from /lib/libpthread.so.0
#7  0xb7499600 in ?? () from /lib/libpthread.so.0

Thread 2 (Thread 0xb1b00b70 (LWP 5889)):
[KCrash Handler]
#7  QMutex::lock (this=0x82a7196) at thread/qmutex.cpp:150
#8  0xb59d32a3 in relock (this=<value optimized out>) at /usr/include/QtCore/qmutex.h:120
#9  QMutexLocker (this=<value optimized out>) at /usr/include/QtCore/qmutex.h:102
#10 Soprano::Error::ErrorCache::clearError (this=<value optimized out>) at /usr/src/debug/soprano-2.4.63/soprano/error.cpp:238
#11 0xb59d4bc7 in Soprano::Error::ErrorCache::setError (this=0x82a7188, error=...) at /usr/src/debug/soprano-2.4.63/soprano/error.cpp:225
#12 0xb5974728 in Soprano::Client::DBusModel::addStatement (this=0x82a7180, statement=...) at /usr/src/debug/soprano-2.4.63/client/dbus/dbusmodel.cpp:82
#13 0xb6cb4787 in Nepomuk::MainModel::addStatement (this=0x8192e68, statement=...) at /usr/src/debug/kdelibs-4.5.61svn1153958/nepomuk/core/nepomukmainmodel.cpp:252
#14 0xb59e533b in Soprano::FilterModel::addStatement (this=0x81526c8, statement=...) at /usr/src/debug/soprano-2.4.63/soprano/filtermodel.cpp:92
#15 0xb6cb0870 in Nepomuk::ResourceFilterModel::addStatement (this=0x81526c8, statement=...) at /usr/src/debug/kdelibs-4.5.61svn1153958/nepomuk/core/resourcefiltermodel.cpp:71
#16 0xb59c8e3c in Soprano::Model::addStatement (this=0x81526c8, subject=..., predicate=..., object=..., context=...) at /usr/src/debug/soprano-2.4.63/soprano/model.cpp:135
#17 0xb2b1ab51 in Nepomuk::IndexFeeder::generateGraph (this=0x8180ec8, resourceUri=...) at /usr/src/debug/kdebase-runtime-4.5.61svn1153958/nepomuk/services/strigi/nepomukindexfeeder.cpp:256
#18 0xb2b1af4c in Nepomuk::IndexFeeder::addToModel (this=0x8180ec8, rs=...) at /usr/src/debug/kdebase-runtime-4.5.61svn1153958/nepomuk/services/strigi/nepomukindexfeeder.cpp:144
#19 0xb2b1c953 in Nepomuk::IndexFeeder::handleRequest (this=0x8180ec8, request=...) at /usr/src/debug/kdebase-runtime-4.5.61svn1153958/nepomuk/services/strigi/nepomukindexfeeder.cpp:241
#20 0xb2b1d90c in Nepomuk::IndexFeeder::end (this=0x8180ec8, forceCommit=true) at /usr/src/debug/kdebase-runtime-4.5.61svn1153958/nepomuk/services/strigi/nepomukindexfeeder.cpp:107
#21 0xb2b18fc0 in Nepomuk::StrigiIndexWriter::finishAnalysis (this=0x81f9cc0, idx=0xb1b000f8) at /usr/src/debug/kdebase-runtime-4.5.61svn1153958/nepomuk/services/strigi/nepomukindexwriter.cpp:570
#22 0xb51dd1e2 in Strigi::AnalysisResult::Private::write (this=0x82db640) at /usr/src/debug/strigi-0.7.2svn1104377/libstreamanalyzer/lib/analysisresult.cpp:214
#23 0xb51dd365 in Strigi::AnalysisResult::~AnalysisResult (this=0xb1b000f8, __in_chrg=<value optimized out>) at /usr/src/debug/strigi-0.7.2svn1104377/libstreamanalyzer/lib/analysisresult.cpp:183
#24 0xb2b1fed2 in Nepomuk::Indexer::indexFile (this=0x8182620, info=...) at /usr/src/debug/kdebase-runtime-4.5.61svn1153958/nepomuk/services/strigi/nepomukindexer.cpp:140
#25 0xb2b10ab0 in Nepomuk::IndexScheduler::analyzeDir (this=0x81814b8, dir=..., flags=...) at /usr/src/debug/kdebase-runtime-4.5.61svn1153958/nepomuk/services/strigi/indexscheduler.cpp:298
#26 0xb2b131d1 in Nepomuk::IndexScheduler::run (this=0x81814b8) at /usr/src/debug/kdebase-runtime-4.5.61svn1153958/nepomuk/services/strigi/indexscheduler.cpp:266
#27 0xb751462f in QThreadPrivate::start (arg=0x81814b8) at thread/qthread_unix.cpp:248
#28 0xb74996e5 in start_thread () from /lib/libpthread.so.0
#29 0xb7499600 in ?? () from /lib/libpthread.so.0

Thread 1 (Thread 0xb57bb700 (LWP 5832)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb6074d5e in poll () from /lib/libc.so.6
#2  0xb5e189eb in ?? () from /lib/libdbus-1.so.3
#3  0xb5e104ec in ?? () from /lib/libdbus-1.so.3
#4  0xb5e0e65d in ?? () from /lib/libdbus-1.so.3
#5  0xb5df88ab in ?? () from /lib/libdbus-1.so.3
#6  0xb5df9178 in ?? () from /lib/libdbus-1.so.3
#7  0xb5dfafa4 in ?? () from /lib/libdbus-1.so.3
#8  0xb5e08d1f in dbus_pending_call_block () from /lib/libdbus-1.so.3
#9  0xb5dfa5b3 in dbus_connection_send_with_reply_and_block () from /lib/libdbus-1.so.3
#10 0xb7442a8e in q_dbus_connection_send_with_reply_and_block (error=<value optimized out>, timeout_milliseconds=<value optimized out>, message=<value optimized out>, 
    connection=<value optimized out>) at qdbus_symbols_p.h:133
#11 QDBusConnectionPrivate::sendWithReply (error=<value optimized out>, timeout_milliseconds=<value optimized out>, message=<value optimized out>, connection=<value optimized out>)
    at qdbusintegrator.cpp:1808
#12 0xb742dcdf in QDBusConnection::call (this=0xffffffff, message=..., mode=4294967295, timeout=-1) at qdbusconnection.cpp:522
#13 0xb744d6a6 in QDBusAbstractInterface::callWithArgumentList (this=0x8162bd0, mode=Block, method=..., args=...) at qdbusabstractinterface.cpp:440
#14 0xb5972405 in Soprano::Client::DBusServerInterface::createModel (this=0x1, name=...) at /usr/src/debug/soprano-2.4.63/client/dbus/dbusserverinterface.h:57
#15 0xb5973c93 in Soprano::Client::DBusClient::createModel (this=0x817fa68, name=..., settings=...) at /usr/src/debug/soprano-2.4.63/client/dbus/dbusclient.cpp:73
#16 0xb6cb2890 in (anonymous namespace)::GlobalModelContainer::init (this=0x817fa68, forced=true) at /usr/src/debug/kdelibs-4.5.61svn1153958/nepomuk/core/nepomukmainmodel.cpp:92
#17 0xb6cb682a in Nepomuk::MainModel::init (this=0x8192e68) at /usr/src/debug/kdelibs-4.5.61svn1153958/nepomuk/core/nepomukmainmodel.cpp:176
#18 0xb6caba46 in Nepomuk::ResourceManager::init (this=0x811e410) at /usr/src/debug/kdelibs-4.5.61svn1153958/nepomuk/core/resourcemanager.cpp:329
#19 0xb6cad82b in Nepomuk::ResourceManagerPrivate::_k_storageServiceInitialized (this=0x817eef8, success=true) at /usr/src/debug/kdelibs-4.5.61svn1153958/nepomuk/core/resourcemanager.cpp:220
#20 0xb6cad951 in Nepomuk::ResourceManager::qt_metacall (this=0x811e410, _c=InvokeMetaMethod, _id=9, _a=0xbf90640c) at /usr/src/debug/kdelibs-4.5.61svn1153958/build/nepomuk/resourcemanager.moc:90
#21 0xb743bd5e in QDBusConnectionPrivate::deliverCall (this=0x80b48c0, object=0x811e410, msg=..., metaTypes=..., slotIdx=1) at qdbusintegrator.cpp:904
#22 0xb74482d6 in QDBusCallDeliveryEvent::placeMetaCall (this=0x82d8e80, object=0x811e410) at qdbusintegrator_p.h:101
#23 0xb762a4cf in QObject::event (this=0x811e410, e=0x82d8e80) at kernel/qobject.cpp:1240
#24 0xb63352ac in QApplicationPrivate::notify_helper (this=0x8068730, receiver=0x811e410, e=0x82d8e80) at kernel/qapplication.cpp:4302
#25 0xb633c0e8 in QApplication::notify (this=0xbf906d68, receiver=0x811e410, e=0x82d8e80) at kernel/qapplication.cpp:4185
#26 0xb6f06581 in KApplication::notify (this=0xbf906d68, receiver=0x811e410, event=0x82d8e80) at /usr/src/debug/kdelibs-4.5.61svn1153958/kdeui/kernel/kapplication.cpp:309
#27 0xb761958e in QCoreApplication::notifyInternal (this=0xbf906d68, receiver=0x811e410, event=0x82d8e80) at kernel/qcoreapplication.cpp:726
#28 0xb761d097 in sendEvent (event=<value optimized out>, receiver=<value optimized out>) at kernel/qcoreapplication.h:215
#29 QCoreApplicationPrivate::sendPostedEvents (event=<value optimized out>, receiver=<value optimized out>) at kernel/qcoreapplication.cpp:1367
#30 0xb761d21c in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1260
#31 0xb76466cd in sendPostedEvents () at kernel/qcoreapplication.h:220
#32 postEventSourceDispatch () at kernel/qeventdispatcher_glib.cpp:276
#33 0xb5ef64c2 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#34 0xb5ef9d98 in ?? () from /usr/lib/libglib-2.0.so.0
#35 0xb5ef9ebe in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#36 0xb76461b1 in QEventDispatcherGlib::processEvents (this=0x80686f0, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#37 0xb63f5dfa in QGuiEventDispatcherGlib::processEvents (this=0x80686f0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0xb7617bfd in QEventLoop::processEvents (this=0xbf906bf4, flags=) at kernel/qeventloop.cpp:149
#39 0xb7618049 in QEventLoop::exec (this=0xbf906bf4, flags=...) at kernel/qeventloop.cpp:201
#40 0xb761d2f0 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#41 0xb6335354 in QApplication::exec () at kernel/qapplication.cpp:3581
#42 0x0804b3ce in main (argc=2, argv=0xbf906f04) at /usr/src/debug/kdebase-runtime-4.5.61svn1153958/nepomuk/servicestub/main.cpp:165

Possible duplicates by query: bug 241600, bug 239842, bug 225512, bug 223462, bug 208350.

Reported using DrKonqi
Comment 1 Sebastian Trueg 2010-07-29 11:37:42 UTC
it would be good to know if the crash does still happen with the latest unstable libdbus >=1.3.1
Comment 2 Sebastian Trueg 2010-09-08 09:44:33 UTC
SVN commit 1172903 by trueg:

Never directly access the main model in ResourceData. Instead go through
mainModel(), thus, properly locking the initialization. This fixes crashes
at Nepomuk startup.

BUG: 246110


 M  +1 -1      resourcedata.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1172903
Comment 3 Dario Andres 2010-11-18 19:06:23 UTC
[Comment from a bug triager]
Bug 251418 looks similar to this, but on a recent kdelibs version.
Comment 4 Jekyll Wu 2012-07-06 17:56:18 UTC
*** Bug 291493 has been marked as a duplicate of this bug. ***