Never directly access the main model in ResourceData. Instead go through mainModel(), thus, properly locking the initialization. This fixes crashes at Nepomuk startup.

BUG: 246110

svn path=/trunk/KDE/kdelibs/; revision=1172903